# baker

./: .gitignore  README.md
baker/: CMakeLists.txt  package.xml
baker_arm_module_interface/: CMakeLists.txt  README.md  package.xml
baker_arm_module_interface/launch/: baker_arm_module_interface.launch
baker_arm_module_interface/rviz-config/: arm_with_map.rviz
baker_arm_module_interface/scripts/: baker_arm_client.py  baker_arm_server.py  motion_planning.py  tf_publisher.py
baker_brush_cleaning_module_interface/: CMakeLists.mira  CMakeLists.txt  PackageList.txt  package.xml
baker_brush_cleaning_module_interface/etc/: BrushCleaningModuleInterface.xml
baker_brush_cleaning_module_interface/launch/: brush_cleaning_module_interface.launch
baker_brush_cleaning_module_interface/src/: BrushCleaningModuleInterface.cpp
baker_detections_visualizer/: CMakeLists.txt  README.md  frames.gv  package.xml
baker_detections_visualizer/launch/: baker_detections_visualizer.launch
baker_detections_visualizer/scripts/: tf_converter.py  trashcan_visualizer.py
baker_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
baker_msgs/action/: DirtDetection.action
baker_msgs/msg/: CleanPatternParams.msg  RotatedRect.msg
baker_msgs/srv/: CleanPattern.srv  GetMap.srv
baker_office_cleaning_application/: CMakeLists.txt  package.xml  readme.md
baker_office_cleaning_application/launch/: office_cleaning_application.launch
baker_office_cleaning_application/scripts/: test2_move_base_path.py  test_move_base.py  test_move_base_multi.py  test_move_base_path.py  test_room_exploration.py  test_thread_interruption.py  wet_cleaning_application.py
baker_office_cleaning_application/scripts/scxml_tests/: simple_statemachine.xml
baker_office_cleaning_application/src/: map_management_client.cpp
baker_vacuum_cleaning_module_interface/: CMakeLists.mira  CMakeLists.txt  PackageList.txt  package.xml
baker_vacuum_cleaning_module_interface/etc/: VacuumCleaningModuleInterface.xml
baker_vacuum_cleaning_module_interface/launch/: vacuum_cleaning_module_interface.launch
baker_vacuum_cleaning_module_interface/scripts/: tf_publisher_vacuum_cleaner.py
baker_vacuum_cleaning_module_interface/src/: VacuumCleaningModuleInterface.cpp
baker_wet_cleaning_application/: .gitignore  CMakeLists.txt  package.xml  readme.md
baker_wet_cleaning_application/action/: InterruptAction.action
baker_wet_cleaning_application/launch/: basic_application.launch  basic_test.launch  detections_visualizer.launch  robotic_arm.launch
baker_wet_cleaning_application/resources_lab_ipa/logs/: log_2019_23_3_run1.json  log_2019_26_3_run1.json  log_2019_31_4_run1.json
baker_wet_cleaning_application/resources_test/logs/: log_2018_29_3_run1.json  log_2019_20_3_run1.json
baker_wet_cleaning_application/scripts/: README.md  abstract_cleaning_behavior.py  application_container.py  application_wet_cleaning.py  behavior_container.py  database.py  database_classes.py  database_handler.py  database_handler_test.py  database_scenarios.py  database_utils.py  dirt_removing_behavior.py  dry_cleaning_behavior.py  fake_trash_dirt_detector_server.py  map_handling_behavior.py  map_receiving_behavior.py  map_segment_extracting_behavior.py  map_segmentation_behavior.py  move_base_behavior.py  move_base_path_behavior.py  move_base_wall_follow_behavior.py  movement_handling_behavior.py  readme.md  readme.txt  room_exploration_behavior.py  room_sequencing_behavior.py  room_wet_floor_cleaning_behavior.py  services_params.py  test_application_wet_cleaning.py  test_bug.py  test_database_handler.py  test_detection_and_removing_dirt.py  tool_changing_behavior.py  trashcan_emptying_behavior.py  trolley_movement_behavior.py  utils.py  wet_cleaning_behavior.py
baker_wet_cleaning_application/scripts/resources/json/: application_data.json
baker_wet_cleaning_application/scripts/tests/: application_wet_cleaning_test.py  database_handler_test.py  database_scenarios.py
baker_wet_cleaning_application/src/: map_management_client.cpp
baker_wet_cleaning_application/tests/: database_scenarios.py
ipa_dirt_detection/: CMakeLists.txt  package.xml  readme.md
ipa_dirt_detection/cfg/: DirtDetection.cfg  DirtDetectionPreprocessing.cfg  DirtDetectionSpectral.cfg
ipa_dirt_detection/common/include/ipa_dirt_detection/: timer.h
ipa_dirt_detection/common/src/: timer.cpp
ipa_dirt_detection/ros/include/autopnp_dirt_detection/: dirt_detection.h
ipa_dirt_detection/ros/include/ipa_dirt_detection/: dataset_create.h  dirt_detection.h  dirt_detection_client_preprocessing.h  label_box.h  (+6 more)
ipa_dirt_detection/ros/launch/: dataset_create.launch  dataset_create.yaml  dirt_detection.launch  dirt_detection.yaml  dirt_detection_client_preprocessing_params.yaml  dirt_detection_dbtest.launch  dirt_detection_dbtest.yaml  dirt_detection_dbtest_withlineremoval.launch  dirt_detection_dbtest_withlineremoval.yaml  dirt_detection_dbtest_withoutwarp.launch  dirt_detection_dbtest_withoutwarp.yaml  dirt_detection_dbtest_withwarp.launch  dirt_detection_dbtest_withwarp.yaml  dirt_detection_labeling.launch  dirt_detection_labeling.yaml  dirt_detection_preprocessing_params.yaml  dirt_detection_server_preprocessing_params.yaml  dirt_detection_server_spectral_params.yaml  dirt_detection_spectral.launch  dirt_detection_standalone.launch  dirt_detection_standalone.yaml  filterbank_create.launch  record_dataset.launch  record_dataset.yaml  record_dataset_rgb.launch  record_dataset_rgb.yaml
ipa_dirt_detection/ros/src/: appearance_check.cpp  dataset_create.cpp  dirt_detection.cpp  dirt_detection_client.cpp  dirt_detection_client_main.cpp  dirt_detection_client_preprocessing.cpp  dirt_detection_server_preprocessing.cpp  dirt_detection_server_spectral.cpp  feature_extract.cpp  filterbank_create.cpp  label_box.cpp  record_dataset.cpp  record_dataset_rgb.cpp
ipa_fake_dirt_trash_detection/: CMakeLists.txt  README.md  package.xml
ipa_fake_dirt_trash_detection/launch/: fake_dirt_trash_detector.launch
ipa_fake_dirt_trash_detection/scripts/: fake_3d_camera_server.py  fake_dirt_trash_detector_server.py
(+115 files in other folders)
