<?xml version="1.0"?>
<package format="2">
	<name>baker_arm_module_interface</name>

	<description>Contains ROS interfaces the arm module.</description>

	<version>0.0.0</version>
	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA, Nobelstr. 12, 70569 Stuttgart, Germany</license>

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

	<buildtool_depend>catkin</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>actionlib</depend>
	<depend>boost</depend>
	<depend>cob_object_detection_msgs</depend>
	<depend>cob_script_server</depend>
	<depend>geometry_msgs</depend>
	<depend>ipa_manipulation_msgs</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>

</package>
