<?xml version="1.0"?>
<package format="2">
	<name>baker_msgs</name>
	<version>0.0.1</version>

	<description>
		This package contains common message type definitions for used within the baker project.
	</description>

	<license>LGPL for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA, Nobelstr. 12, 70569 Stuttgart, Germany</license>

	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<author>Richard Bormann</author>

 	<buildtool_depend>catkin</buildtool_depend>

 	<build_depend>message_generation</build_depend>
 	<exec_depend>message_runtime</exec_depend>

 	<depend>actionlib</depend>  
 	<depend>actionlib_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
</package>

