<?xml version="1.0"?>
<package format="2">
	<name>ipa_dirt_detection</name>
	<version>0.1.0</version>
	<description>
		This component is part of the cleaning scenario of the BakeR project. It provides an algorithm for dirt detection at the floor and the mapping of dirty areas.
	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	<license>Free for academic and non-commercial use; for commercial use, please contact Fraunhofer IPA</license>
	<url>http://ros.org/wiki/ipa_dirt_detection</url>

	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>actionlib</depend>
	<depend>actionlib_msgs</depend>
	<depend>baker_msgs</depend>
	<depend>boost</depend>
	<depend>cob_object_detection_msgs</depend>
	<depend>cv_bridge</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>geometry_msgs</depend>
	<depend>image_transport</depend>
	<depend>libopencv-dev</depend>
	<depend>libpcl-all-dev</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
</package>
