<?xml version="1.0"?>
<package format="2">
  <name>ipa_fake_dirt_trash_detection</name>
  <version>0.0.0</version>
  <description>
    Fake detection for the baker project in case the cameras are not set up
  </description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <license>LGPL</license>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_object_detection_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>

</package>
